--- a/src/templates/default/package.json
+++ b/src/templates/default/package.json
@@ -7,11 +7,12 @@
     "dev": "vite",
     "test": "node --disable-warning=ExperimentalWarning ./scripts/test.js",
     "test:watch": "node --disable-warning=ExperimentalWarning --watch --watch-path=./project ./scripts/test.js",
-    "postinstall": "chmod +x bin/console"
+    "postinstall": "chmod +x bin/console && chmod +x bin/rails"
   },
   "dependencies": {
     "@ruby/wasm-wasi": "^2.7.1",
-    "@ruby/3.4-wasm-wasi": "^2.7.1"
+    "@ruby/3.4-wasm-wasi": "^2.7.1",
+    "@rails-tutorial/wasm": "8.0.0-pre.1"
   },
   "devDependencies": {
     "vite": "^5.2.0"
