--- a/rails-wasm/Gemfile
+++ b/rails-wasm/Gemfile
@@ -1,7 +1,7 @@
 source "https://rubygems.org"
 
 gem "rails", "~> 8.0.0"
-gem "wasmify-rails", "~> 0.3.0", path: "../../../writebook/gems/wasmify-rails"
+gem "wasmify-rails", "~> 0.3.1"
 
 # rails new gems
 gem "propshaft"
