--- a/src/templates/default/package.json
+++ b/src/templates/default/package.json
@@ -10,9 +10,11 @@
     "postinstall": "chmod +x bin/*"
   },
   "dependencies": {
-    "@ruby/wasm-wasi": "^2.7.1",
+    "@rails-tutorial/wasm": "8.0.2-pre.2",
     "@ruby/3.4-wasm-wasi": "^2.7.1",
-    "@rails-tutorial/wasm": "8.0.2-pre.1"
+    "@ruby/wasm-wasi": "^2.7.1",
+    "express": "^5.1.0",
+    "set-cookie-parser": "^2.7.1"
   },
   "devDependencies": {
     "vite": "^5.2.0"
