--- a/src/templates/default/package.json
+++ b/src/templates/default/package.json
@@ -10,13 +10,12 @@
     "postinstall": "chmod +x bin/*"
   },
   "dependencies": {
+    "@electric-sql/pglite": "^0.3.1",
     "@rails-tutorial/wasm": "8.0.2-pre.2",
     "@ruby/3.4-wasm-wasi": "^2.7.1",
     "@ruby/wasm-wasi": "^2.7.1",
-    "better-sqlite3": "^11.10.0",
     "express": "^5.1.0",
-    "set-cookie-parser": "^2.7.1",
-    "sqlite-sync": "^0.3.9"
+    "set-cookie-parser": "^2.7.1"
   },
   "devDependencies": {
     "vite": "^5.2.0"
