--- a/src/templates/default/package.json
+++ b/src/templates/default/package.json
@@ -15,6 +15,7 @@
     "@ruby/3.4-wasm-wasi": "^2.7.1",
     "@ruby/wasm-wasi": "^2.7.1",
     "express": "^5.1.0",
+    "multer": "^2.0.1",
     "set-cookie-parser": "^2.7.1"
   },
   "devDependencies": {
