--- a/src/templates/default/package.json
+++ b/src/templates/default/package.json
@@ -11,9 +11,8 @@
   },
   "dependencies": {
     "@electric-sql/pglite": "^0.3.1",
-    "@rails-tutorial/wasm": "8.0.2-pre.2",
-    "@ruby/3.4-wasm-wasi": "^2.7.1",
     "@ruby/wasm-wasi": "^2.7.1",
+    "@rails-tutorial/wasm": "8.0.2-rc.1",
     "express": "^5.1.0",
     "multer": "^2.0.1",
     "set-cookie-parser": "^2.7.1"
