--- a/src/templates/default/package.json
+++ b/src/templates/default/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "preinstall": "node scripts/preinstall.js",
     "dev": "vite",
     "test": "node --disable-warning=ExperimentalWarning ./scripts/test.js",
     "test:watch": "node --disable-warning=ExperimentalWarning --watch --watch-path=./workspace ./scripts/test.js",
@@ -11,6 +12,7 @@
   },
   "dependencies": {
     "@electric-sql/pglite": "^0.3.1",
+    "@ruby/3.4-wasm-wasi": "^2.7.1",
     "@ruby/wasm-wasi": "^2.7.1",
     "@rails-tutorial/wasm": "8.0.2-rc.1",
     "express": "^5.1.0",
