--- a/src/templates/default/package.json
+++ b/src/templates/default/package.json
@@ -7,12 +7,12 @@
     "dev": "vite",
     "test": "node --disable-warning=ExperimentalWarning ./scripts/test.js",
     "test:watch": "node --disable-warning=ExperimentalWarning --watch --watch-path=./workspace ./scripts/test.js",
-    "postinstall": "chmod +x bin/*"
+    "postinstall": "chmod +x bin/* && node --disable-warning=ExperimentalWarning ./scripts/wait-wasm.js"
   },
   "dependencies": {
     "@electric-sql/pglite": "^0.3.1",
-    "@ruby/wasm-wasi": "^2.7.1",
     "@rails-tutorial/wasm": "^8.0.2-rc.1",
+    "@ruby/wasm-wasi": "^2.7.1",
     "express": "^5.1.0",
     "multer": "^2.0.1",
     "set-cookie-parser": "^2.7.1"
